--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,12 @@
        <h1 class="display-4 text-center">
            <i class="fas fa-map-marked mr-4"></i> Store Locater
        </h1>
+       <a href="/add.html" class="btn btn-success mb-4">
+        Add Store
+       </a>
+       <div id='map' style='width: 100%; height: 500px;'></div>
     </div>
+
+    <script src="js/map.js"></script>
 </body>
 </html>
